Added NOCTI prep to dropdown

--- a/nocti_prep/g_preppack/prepcards/oley_flashcards/index.html
+++ b/nocti_prep/g_preppack/prepcards/oley_flashcards/index.html
@@ -352,7 +352,8 @@
           <div class="dropdown-content">
             <a onclick="languageTypePicker('data_java')" href="#">Javascript</a>
             <a onclick="languageTypePicker('data_py')" href="#">Python</a>
-            <a href="#">HTML</a>
+            <a onclick="languageTypePicker('data_html')" href="#">HTML</a>
+            <a onclick="languageTypePicker('data_nocti')" href="#">NOCTI prep</a>
           </div>
         </div>
       </div>
